<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="action_addSemester">Add Semester</string>
    <string name="menu_edit">Settings</string>
    <string name="section_menu_importList">Import Class List</string>
    <string name="section_menu_addStudent">Add Student</string>
    <string name="section_menu_generateQrCodeBatch">Generate QR Code Batch</string>
    <string name="section_menu_openQrCodePath">Open QR Code Path</string>
    <string name="section_menu_openAnalysisScreen">Open Analysis Screen</string>
    <string name="sectionNameInput">Section Name</string>
    <string name="importClassListBtnText">Import Class List</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_activity_label">Attendance Tracker</string>
    <string name="create_new_sction_label">Create New Section</string>
    <string name="login">Login</string>
    <string name="previous">Previous</string>
    <string name="student_name">Student Name</string>
    <string name="scan_button">Scan</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="create_new_class">Create New Class</string>
    <string name="add_student_to_class_btn">Add Student to Class</string>
    <string name="view_class_list_btn">View Class List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_admin_login">AdminLoginActivity</string>
    <string name="title_activity_section_list">SectionListActivity</string>
    <string name="next">Next</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="info_header">App Info</string>

    <!-- Messages Preferences -->
    <string name="appVer_title">App Version</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>