<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.attendancetracker.SectionViewActivity" >
    <item
        android:id="@+id/importClassList"
        android:title="@string/section_menu_importList" />
    <item
        android:id="@+id/addStudent"
        android:title="@string/section_menu_addStudent" />
    <item
        android:id="@+id/generateQrCodeBatch"
        android:title="@string/section_menu_generateQrCodeBatch" />
    <item
        android:id="@+id/generateReports"
        android:title="Generate Report" />
    <item
        android:id="@+id/openQRCodePath"
        android:title="@string/section_menu_openQrCodePath" />
    <item
        android:id="@+id/openAnalysisScreen"
        android:title="@string/section_menu_openAnalysisScreen" />
</menu>